fix: server response and login functions refactor

--- a/templates/email_verification.html
+++ b/templates/email_verification.html
@@ -29,8 +29,8 @@
 <body>
     <h1>Confirmación de correo electrónico</h1>
     <p>Estimado/a {{.name}},</p>
-    <p>Gracias por registrarte en nuestro sitio web. Para completar el proceso de registro, debes verificar tu dirección de correo electrónico haciendo clic en el siguiente enlace:</p>
-    <p><a href="{{.link}}">{{.link}}</a></p>
+    <p>Gracias por registrarte en nuestro sitio web. Para completar el proceso de registro, </p>
+    <p>debes verificar tu dirección de correo electrónico haciendo clic en el siguiente <a href="{{.link}}">enlace de activacion.</a></p>
     <p>Si no has solicitado este registro, ignora este correo electrónico.</p>
     <p>Saludos.</p>
 </body>
